k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jesseinit-portfolio
  labels:
    app: jesseinit-portfolio
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: jesseinit-portfolio
